added DevSecOps project

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     <main class="max-w-4xl mx-auto p-6 space-y-12">
         <!-- Projects Section -->
         <section id="projects">
-            <h2 class="text-2xl font-semibold mb-4">🚀 Live Projects</h2>
+            <h2 class="text-2xl font-semibold mb-4">🚀 Projects</h2>
             <div class="grid gap-6">
 
                 <!-- Microservices -->
                 <article class="p-4 bg-white rounded shadow">
                     <h3 class="text-xl font-bold">Microservices Demo</h3>
-                    <p class="text-sm text-gray-600">Docker • Kubernetes • Helm • GitHub Actions</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
+                    <p class="text-sm text-gray-600">Docker • Kubernetes • Helm • AWS • DockerHub</p>
                     <p class="mt-1 text-sm">Repo: <a target="_blank"
                             href="https://github.com/Chariis/microservices-project.git"
                             class="text-indigo-600">github.com/Chariis/microservices-project</a></p>
@@ -34,81 +33,86 @@
                     <div class="mt-3 grid gap-2">
                         <img src="assets/diagrams/microservices-arch.png" alt="Microservices architecture"
                             class="rounded shadow">
-                        <img src="assets/screenshots/microservices-ui.png" alt="Microservices UI"
-                            class="rounded shadow">
                     </div>
                 </article>
 
-                <!-- Monitoring -->
+                <!-- DevSecOps -->
                 <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">Monitoring & Observability</h3>
-                    <p class="text-sm text-gray-600">Prometheus • Grafana • Loki • Alertmanager</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">grafana dashboard</a></p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                    </p>
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/monitoring-arch.png" alt="Monitoring architecture"
-                            class="rounded shadow">
-                        <img src="assets/screenshots/grafana-dashboard.png" alt="Grafana dashboard"
-                            class="rounded shadow">
-                    </div>
-                </article>
+                    <h3 class="text-xl font-bold">DevSecOps Pipeline</h3>
+                    <p class="text-sm text-gray-600"> Kubernetes • Helm • Jenkins • AWS • DockerHub • Prometheus •
+                        Grafana</p>
+                    <p class="mt-1 text-sm">Repo: <a target="_blank"
+                            href="https://github.com/Chariis/DevSecOps-project.git"
+                            class="text-indigo-600">github.com/Chariis/DevSecOps-project</a></p>
+            </div>
+            </article>
 
-                <!-- Azure -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">Azure 3-Tier App</h3>
-                    <p class="text-sm text-gray-600">Azure App Service • SQL Database • Bicep • Azure DevOps</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                    </p>
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/azure-arch.png" alt="Azure 3-tier architecture"
-                            class="rounded shadow">
-                        <img src="assets/screenshots/azure-app.png" alt="Azure app screenshot" class="rounded shadow">
-                    </div>
-                </article>
+            <!-- Monitoring -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">Monitoring & Observability</h3>
+                <p class="text-sm text-gray-600">Prometheus • Grafana • Loki • Alertmanager</p>
+                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">grafana dashboard</a></p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
+                </p>
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/monitoring-arch.png" alt="Monitoring architecture" class="rounded shadow">
+                    <img src="assets/screenshots/grafana-dashboard.png" alt="Grafana dashboard" class="rounded shadow">
+                </div>
+            </article>
 
-                <!-- AWS -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">AWS Serverless API</h3>
-                    <p class="text-sm text-gray-600">Lambda • API Gateway • DynamoDB • Terraform • CloudWatch</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                    </p>
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/aws-arch.png" alt="AWS serverless architecture"
-                            class="rounded shadow">
-                        <img src="assets/screenshots/aws-api.png" alt="AWS API screenshot" class="rounded shadow">
-                    </div>
-                </article>
+            <!-- Azure -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">Azure 3-Tier App</h3>
+                <p class="text-sm text-gray-600">Azure App Service • SQL Database • Bicep • Azure DevOps</p>
+                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
+                </p>
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/azure-arch.png" alt="Azure 3-tier architecture" class="rounded shadow">
+                    <img src="assets/screenshots/azure-app.png" alt="Azure app screenshot" class="rounded shadow">
+                </div>
+            </article>
 
-                <!-- GCP -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">GCP CI/CD with Cloud Run</h3>
-                    <p class="text-sm text-gray-600">Cloud Build • Cloud Run • Cloud SQL • Cloud Monitoring</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                    </p>
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/gcp-arch.png" alt="GCP architecture" class="rounded shadow">
-                        <img src="assets/screenshots/gcp-cloudrun.png" alt="GCP Cloud Run screenshot"
-                            class="rounded shadow">
-                    </div>
-                </article>
+            <!-- AWS -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">AWS Serverless API</h3>
+                <p class="text-sm text-gray-600">Lambda • API Gateway • DynamoDB • Terraform • CloudWatch</p>
+                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
+                </p>
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/aws-arch.png" alt="AWS serverless architecture" class="rounded shadow">
+                    <img src="assets/screenshots/aws-api.png" alt="AWS API screenshot" class="rounded shadow">
+                </div>
+            </article>
 
-                <!-- Capstone -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">Capstone: End-to-End DevOps Pipeline</h3>
-                    <p class="text-sm text-gray-600">Terraform • Jenkins • Kubernetes • Prometheus/Grafana</p>
-                    <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                    </p>
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/capstone-arch.png" alt="Capstone pipeline architecture"
-                            class="rounded shadow">
-                        <img src="assets/screenshots/capstone-ui.png" alt="Capstone project UI" class="rounded shadow">
-                    </div>
-                </article>
+            <!-- GCP -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">GCP CI/CD with Cloud Run</h3>
+                <p class="text-sm text-gray-600">Cloud Build • Cloud Run • Cloud SQL • Cloud Monitoring</p>
+                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
+                </p>
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/gcp-arch.png" alt="GCP architecture" class="rounded shadow">
+                    <img src="assets/screenshots/gcp-cloudrun.png" alt="GCP Cloud Run screenshot"
+                        class="rounded shadow">
+                </div>
+            </article>
+
+            <!-- Capstone -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">Capstone: End-to-End DevOps Pipeline</h3>
+                <p class="text-sm text-gray-600">Terraform • Jenkins • Kubernetes • Prometheus/Grafana</p>
+                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
+                </p>
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/capstone-arch.png" alt="Capstone pipeline architecture"
+                        class="rounded shadow">
+                    <img src="assets/screenshots/capstone-ui.png" alt="Capstone project UI" class="rounded shadow">
+                </div>
+            </article>
 
             </div>
         </section>
@@ -117,10 +121,10 @@
         <section id="about">
             <h2 class="text-2xl font-semibold mb-2">👨‍💻 About Me</h2>
             <p class="text-gray-600">
-                I'm Chigozie, a Systems Engineering student and DevOps Engineer.
+                I'm Chigozie, a Systems Engineering Graduate and DevOps Engineer.
                 I specialize in cloud platforms (Azure, AWS, GCP), automation, and CI/CD pipelines.
                 I also have have interests in AI/ML, and I am passionate about building scalable, reliable systems.
-                This portfolio showcases projects that demonstrate containerization, monitoring,
+                This portfolio showcases projects I have completed that demonstrate containerization, monitoring,
                 and scalable deployments.
             </p>
         </section>
