Added api project

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
             </div>
             </article>
 
+            <!-- Api Project -->
+            <article class="p-4 bg-white rounded shadow">
+                <h3 class="text-xl font-bold">API Project</h3>
+                <p class="text-sm text-gray-600">Lambda • Simple Email Service • API Gateway • Certificate Manager</p>
+                <p class="mt-1 text-sm">Repo: <a target="_blank" href="https://github.com/Chariis/portfolio-api.git"
+                        class="text-indigo-600">github.com/Chariis/portfolio-api</a></p>
+                <!-- Images -->
+                <div class="mt-3 grid gap-2">
+                    <img src="assets/diagrams/microservices-arch.png" alt="Microservices architecture"
+                        class="rounded shadow">
+                </div>
+            </article>
+
             <!-- Monitoring -->
             <article class="p-4 bg-white rounded shadow">
                 <h3 class="text-xl font-bold">Monitoring & Observability</h3>
