--- a/index.html
+++ b/index.html
@@ -6,158 +6,159 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Chigozie Nnadi — DevOps Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 
-<body class="bg-gray-50 text-gray-900">
-    <!-- Header -->
-    <header class="max-w-4xl mx-auto p-6 text-center">
-        <h1 class="text-3xl font-bold">Chigozie Nnadi</h1>
-        <p class="mt-2 text-gray-600">DevOps • CI/CD • Kubernetes • Cloud (AWS, Azure, GCP)</p>
+<body class="bg-gray-50 text-gray-900 font-sans">
+    <header class="max-w-4xl mx-auto p-8 text-center">
+        <h1 class="text-4xl font-extrabold text-gray-800">Chigozie Nnadi</h1>
+        <p class="mt-3 text-lg text-indigo-600 font-medium">DevOps Engineer • Cloud Specialist (AWS/Azure) • Automation
+            Expert</p>
+        <div class="mt-4 flex justify-center space-x-4">
+            <a href="https://github.com/Chariis" target="_blank" class="text-gray-600 hover:text-gray-900"><i
+                    class="fab fa-github fa-lg"></i></a>
+            <a href="https://linkedin.com/in/nnadi-charis-chigozie" target="_blank"
+                class="text-gray-600 hover:text-blue-700"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a href="mailto:nnadicharis@gmail.com" class="text-gray-600 hover:text-red-600"><i
+                    class="fas fa-envelope fa-lg"></i></a>
+        </div>
     </header>
 
-    <!-- Main Content -->
-    <main class="max-w-4xl mx-auto p-6 space-y-12">
-        <!-- Projects Section -->
-        <section id="projects">
-            <h2 class="text-2xl font-semibold mb-4">🚀 Projects</h2>
-            <div class="grid gap-6">
+    <main class="max-w-5xl mx-auto p-6 space-y-16">
 
-                <!-- Microservices -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">Microservices Demo</h3>
-                    <p class="text-sm text-gray-600">Docker • Kubernetes • Helm • AWS • DockerHub</p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank"
-                            href="https://github.com/Chariis/microservices-project.git"
-                            class="text-indigo-600">github.com/Chariis/microservices-project</a></p>
-                    <!-- Images -->
-                    <div class="mt-3 grid gap-2">
-                        <img src="assets/diagrams/microservices-arch.png" alt="Microservices architecture"
-                            class="rounded shadow">
+        <section id="projects">
+            <h2 class="text-3xl font-bold mb-8 border-b pb-2 border-gray-200">🚀 Featured Projects</h2>
+            <div class="grid md:grid-cols-2 gap-8">
+
+                <article
+                    class="flex flex-col h-full bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden border border-gray-100">
+                    <div class="p-6 flex-1">
+                        <div class="flex justify-between items-start">
+                            <h3 class="text-xl font-bold text-gray-800">Serverless Container API</h3>
+                            <span
+                                class="bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">Live</span>
+                        </div>
+                        <p class="mt-2 text-sm text-gray-600 line-clamp-3">
+                            A containerized Python API deployed on AWS ECS Fargate. Features zero-downtime deployments,
+                            Application Load Balancing, and a fully automated CI/CD pipeline using Terraform and GitHub
+                            Actions.
+                        </p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">AWS ECS Fargate</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Docker</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Terraform</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">GitHub Actions</span>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 p-4 border-t flex justify-between items-center">
+                        <a href="https://github.com/Chariis/ecs-api" target="_blank"
+                            class="text-sm font-medium text-indigo-600 hover:text-indigo-800">
+                            <i class="fab fa-github mr-1"></i> View Code
+                        </a>
+                        <a href="http://api.chigoziennadi.com" target="_blank"
+                            class="text-sm font-medium text-gray-600 hover:text-gray-900">
+                            <i class="fas fa-external-link-alt mr-1"></i> Live Demo
+                        </a>
                     </div>
                 </article>
 
-                <!-- DevSecOps -->
-                <article class="p-4 bg-white rounded shadow">
-                    <h3 class="text-xl font-bold">DevSecOps Pipeline</h3>
-                    <p class="text-sm text-gray-600"> Kubernetes • Helm • Jenkins • AWS • DockerHub • Prometheus •
-                        Grafana</p>
-                    <p class="mt-1 text-sm">Repo: <a target="_blank"
-                            href="https://github.com/Chariis/DevSecOps-project.git"
-                            class="text-indigo-600">github.com/Chariis/DevSecOps-project</a></p>
-            </div>
-            </article>
+                <article
+                    class="flex flex-col h-full bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden border border-gray-100">
+                    <div class="p-6 flex-1">
+                        <div class="flex justify-between items-start">
+                            <h3 class="text-xl font-bold text-gray-800">The Cloud Resume Challenge</h3>
+                            <span
+                                class="bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">Live</span>
+                        </div>
+                        <p class="mt-2 text-sm text-gray-600 line-clamp-3">
+                            A serverless portfolio website hosted on S3 & CloudFront. The backend uses Lambda and
+                            DynamoDB
+                            for a visitor counter, with Infrastructure as Code managed via Terraform and automated OIDC
+                            pipelines.
+                        </p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">AWS Lambda</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">DynamoDB</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Terraform</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">CloudFront</span>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 p-4 border-t flex justify-between items-center">
+                        <a href="https://github.com/Chariis/cloud-resume-aws" target="_blank"
+                            class="text-sm font-medium text-indigo-600 hover:text-indigo-800">
+                            <i class="fab fa-github mr-1"></i> View Code
+                        </a>
+                        <a href="https://resume.chigoziennadi.com" target="_blank"
+                            class="text-sm font-medium text-gray-600 hover:text-gray-900">
+                            <i class="fas fa-external-link-alt mr-1"></i> Live Demo
+                        </a>
+                    </div>
+                </article>
 
-            <!-- Api Project -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">API Project</h3>
-                <p class="text-sm text-gray-600">Lambda • Simple Email Service • API Gateway • Certificate Manager</p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="https://github.com/Chariis/portfolio-api.git"
-                        class="text-indigo-600">github.com/Chariis/portfolio-api</a></p>
-                <!-- Images -->
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/microservices_diagram.png" alt="Microservices architecture"
-                        class="rounded shadow">
-                </div>
-            </article>
+                <article
+                    class="flex flex-col h-full bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden border border-gray-100">
+                    <div class="p-6 flex-1">
+                        <h3 class="text-xl font-bold text-gray-800">DevSecOps Pipeline</h3>
+                        <p class="mt-2 text-sm text-gray-600 line-clamp-3">
+                            Integrated security into a Kubernetes CI/CD pipeline using Jenkins and Helm. Implemented
+                            automated vulnerability scanning with Trivy and monitoring with Prometheus & Grafana.
+                        </p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Jenkins</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Kubernetes</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Helm</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Trivy</span>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 p-4 border-t">
+                        <a href="https://github.com/Chariis/DevSecOps-project.git" target="_blank"
+                            class="text-sm font-medium text-indigo-600 hover:text-indigo-800">
+                            <i class="fab fa-github mr-1"></i> View Code
+                        </a>
+                    </div>
+                </article>
 
-            <!-- Monitoring -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">Monitoring & Observability</h3>
-                <p class="text-sm text-gray-600">Prometheus • Grafana • Loki • Alertmanager</p>
-                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">grafana dashboard</a></p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                </p>
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/monitoring-arch.png" alt="Monitoring architecture" class="rounded shadow">
-                    <img src="assets/screenshots/grafana-dashboard.png" alt="Grafana dashboard" class="rounded shadow">
-                </div>
-            </article>
-
-            <!-- Azure -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">Azure 3-Tier App</h3>
-                <p class="text-sm text-gray-600">Azure App Service • SQL Database • Bicep • Azure DevOps</p>
-                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                </p>
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/azure-arch.png" alt="Azure 3-tier architecture" class="rounded shadow">
-                    <img src="assets/screenshots/azure-app.png" alt="Azure app screenshot" class="rounded shadow">
-                </div>
-            </article>
-
-            <!-- AWS -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">AWS Serverless API</h3>
-                <p class="text-sm text-gray-600">Lambda • API Gateway • DynamoDB • Terraform • CloudWatch</p>
-                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                </p>
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/aws-arch.png" alt="AWS serverless architecture" class="rounded shadow">
-                    <img src="assets/screenshots/aws-api.png" alt="AWS API screenshot" class="rounded shadow">
-                </div>
-            </article>
-
-            <!-- GCP -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">GCP CI/CD with Cloud Run</h3>
-                <p class="text-sm text-gray-600">Cloud Build • Cloud Run • Cloud SQL • Cloud Monitoring</p>
-                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                </p>
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/gcp-arch.png" alt="GCP architecture" class="rounded shadow">
-                    <img src="assets/screenshots/gcp-cloudrun.png" alt="GCP Cloud Run screenshot"
-                        class="rounded shadow">
-                </div>
-            </article>
-
-            <!-- Capstone -->
-            <article class="p-4 bg-white rounded shadow">
-                <h3 class="text-xl font-bold">Capstone: End-to-End DevOps Pipeline</h3>
-                <p class="text-sm text-gray-600">Terraform • Jenkins • Kubernetes • Prometheus/Grafana</p>
-                <p class="mt-2 text-sm">Live: <a href="#" class="text-indigo-600">coming soon</a></p>
-                <p class="mt-1 text-sm">Repo: <a target="_blank" href="#" class="text-indigo-600">coming soon</a>
-                </p>
-                <div class="mt-3 grid gap-2">
-                    <img src="assets/diagrams/capstone-arch.png" alt="Capstone pipeline architecture"
-                        class="rounded shadow">
-                    <img src="assets/screenshots/capstone-ui.png" alt="Capstone project UI" class="rounded shadow">
-                </div>
-            </article>
+                <article
+                    class="flex flex-col h-full bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300 overflow-hidden border border-gray-100">
+                    <div class="p-6 flex-1">
+                        <h3 class="text-xl font-bold text-gray-800">Microservices Deployment</h3>
+                        <p class="mt-2 text-sm text-gray-600 line-clamp-3">
+                            Orchestrated a multi-service application using Docker and Kubernetes. Configured
+                            inter-service communication and automated deployments to AWS EKS using Helm charts.
+                        </p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">AWS EKS</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">Microservices</span>
+                            <span class="px-2 py-1 bg-gray-100 text-xs rounded text-gray-700">DockerHub</span>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 p-4 border-t">
+                        <a href="https://github.com/Chariis/microservices-project.git" target="_blank"
+                            class="text-sm font-medium text-indigo-600 hover:text-indigo-800">
+                            <i class="fab fa-github mr-1"></i> View Code
+                        </a>
+                    </div>
+                </article>
 
             </div>
         </section>
 
-        <!-- About -->
-        <section id="about">
-            <h2 class="text-2xl font-semibold mb-2">👨‍💻 About Me</h2>
-            <p class="text-gray-600">
+        <section id="about" class="bg-white p-8 rounded-lg shadow-sm border border-gray-100">
+            <h2 class="text-2xl font-bold mb-4 text-gray-800">👨‍💻 About Me</h2>
+            <p class="text-gray-600 leading-relaxed">
                 I'm Chigozie, a Systems Engineering Graduate and DevOps Engineer.
                 I specialize in cloud platforms (Azure, AWS, GCP), automation, and CI/CD pipelines.
-                I also have have interests in AI/ML, and I am passionate about building scalable, reliable systems.
-                This portfolio showcases projects I have completed that demonstrate containerization, monitoring,
-                and scalable deployments.
+                I have a strong interest in AI/ML integration in DevOps workflows. I am passionate about building
+                scalable, reliable systems
+                and am currently focused on mastering Infrastructure as Code with Terraform and container orchestration
+                with Kubernetes.
             </p>
         </section>
 
-        <!-- Contact -->
-        <section id="contact">
-            <h2 class="text-2xl font-semibold mb-2">📬 Contact</h2>
-            <ul class="text-gray-600">
-                <li>Email: <a href="mailto:nnadicharis@gmail.com" class="text-indigo-600">nnadicharis@gmail.com</a></li>
-                <li>GitHub: <a target="_blank" href="https://github.com/Chariis"
-                        class="text-indigo-600">github.com/Chariis</a></li>
-                <li>LinkedIn: <a target="_blank" href="https://linkedin.com/in/nnadi-charis-chigozie"
-                        class="text-indigo-600">linkedin.com/in/nnadi-charis-chigozie</a></li>
-            </ul>
-        </section>
     </main>
 
-    <!-- Footer -->
-    <footer class="text-center p-6 text-sm text-gray-500">
-        © 2025 Chigozie Nnadi — Built with ❤️ and GitHub Pages
+    <footer class="text-center p-8 mt-12 bg-gray-800 text-gray-400 text-sm">
+        <p>&copy; 2025 Chigozie Nnadi. All rights reserved.</p>
     </footer>
 </body>
 
